--- a/Homework 5.csproj
+++ b/Homework 5.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="itext7" Version="8.0.1" />
+  </ItemGroup>
 </Project>
